changes to HTML

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -60,6 +60,10 @@ header h1 {
   display: inline;
 }
 
+section {
+  padding: 60px;
+}
+
 /* Applies 20px to every side (top, right, bottom, left) */
 footer {
   background: #fce138;
