--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -94,11 +94,15 @@ footer a {
 }
 
 .hero-form {
-    background-color: #fce138;
-    padding: 20px;
-    width: 500px;
-    color: #024e76;
-  }
+  border: 3px solid #024e76;
+  background-color: #fce138;
+  padding: 20px;
+  width: 500px;
+  color: #024e76;
+  position: absolute;
+  bottom: 120px;
+  right: 140px;
+}
 
   section {
     padding: 60px;
