--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -228,6 +228,7 @@ header h1 {
   background: #024e76;
 }
 
+/* REACH OUT STYLES BEGIN */
 .contact h2 {
   color: #fce138;
 }
@@ -245,6 +246,24 @@ header h1 {
   margin: 30px 0 0 60px;
   color: white;
 }
+
+.contact-info h3 {
+  color: #fce138;
+  font-size: 32px;
+}
+
+.contact-info p, .contact-info address {
+  margin: 20px 0;
+  line-height: 1.5;
+  font-size: 20px;
+  font-style: normal;
+}
+
+.contact-info a {
+  color: #fce138;
+}
+
+/* REACH OUT STYLES END */
 
 /* Footer begin */
 footer {
